Solucion bug isBlank()